crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@deep_chain.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
expression: trace
input_file: crates/barnum_engine/tests/completion/deep_chain.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Chain {
                            rest: ActionId(
                                2,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_parent: {
        TaskId(
            0,
        ): Some(
            Chain {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(1),
                },
            },
        ),
    },
    pending_dispatches: [],
    next_task_id: 1,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            2,
        ),
        value: String("input"),
    },
]

--- Completion: task_id=0, value="a_out" ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(2),
                    value: Frame {
                        parent: None,
                        kind: Chain {
                            rest: ActionId(
                                4,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_parent: {
        TaskId(
            1,
        ): Some(
            Chain {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(2),
                },
            },
        ),
    },
    pending_dispatches: [],
    next_task_id: 2,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            1,
        ),
        handler_id: HandlerId(
            1,
        ),
        value: String("a_out"),
    },
]

--- Completion: task_id=1, value="b_out" ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_parent: {
        TaskId(
            2,
        ): None,
    },
    pending_dispatches: [],
    next_task_id: 3,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            2,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: String("b_out"),
    },
]

--- Completion: task_id=2, value="c_out" ---
Result: Some(String("c_out"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_parent: {},
    pending_dispatches: [],
    next_task_id: 3,
}
Pending: []
