crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@foreach_two.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
assertion_line: 83
expression: trace
input_file: crates/barnum_engine/tests/completion/foreach_two.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                ForEach {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: ForEach {
                            results: [
                                None,
                                None,
                            ],
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            ForEach {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 0,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            ForEach {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 1,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 3,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 1,
            generation: Generation(1),
        },
        TaskId(
            1,
        ): Index {
            slot: 2,
            generation: Generation(1),
        },
    },
    pending_dispatches: [],
    next_task_id: 2,
}
Pending: [
    DispatchEvent {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: Number(10),
    },
    DispatchEvent {
        task_id: TaskId(
            1,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: Number(20),
    },
]

--- Completion: task_id=0, value="r10" ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                ForEach {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: ForEach {
                            results: [
                                Some(
                                    String("r10"),
                                ),
                                None,
                            ],
                        },
                    },
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            ForEach {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 1,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 2,
        first_free: Some(
            FreePointer(1),
        ),
    },
    task_to_frame: {
        TaskId(
            1,
        ): Index {
            slot: 2,
            generation: Generation(1),
        },
    },
    pending_dispatches: [],
    next_task_id: 2,
}
Pending: []

--- Completion: task_id=1, value="r20" ---
Result: Some(Array [String("r10"), String("r20")])
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                ForEach {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: Some(
                        FreePointer(2),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: Some(
                        FreePointer(1),
                    ),
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_frame: {},
    pending_dispatches: [],
    next_task_id: 2,
}
Pending: []
